--- a/farmbot.html
+++ b/farmbot.html
@@ -16,9 +16,10 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/tether/tether.min.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/tether/tether.min.css">
+  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -57,14 +58,14 @@
                 <li class="nav-item">
                     <a class="nav-link link text-white display-7" href="index.html"><span class="mbrib-home mbr-iconfont mbr-iconfont-btn"></span>
                         Home &nbsp; &nbsp;</a>
-                </li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-7" href="farmbot.html" data-toggle="dropdown-submenu" aria-expanded="true"><span class="socicon socicon-newsvine mbr-iconfont mbr-iconfont-btn"></span>Farmbot&nbsp;</a><div class="dropdown-menu"><a class="text-white dropdown-item display-7" href="farmbot.html" aria-expanded="false"><span class="socicon socicon-filmweb mbr-iconfont mbr-iconfont-btn"></span>&nbsp;Farmbot 2020</a><a class="text-white dropdown-item display-7" href="https://farm.bot/" aria-expanded="false" target="_blank"><span class="mbri-right mbr-iconfont mbr-iconfont-btn"></span>Official Farmbot&nbsp;</a><a class="text-white dropdown-item display-7" href="farmbot.html"><span class="mbrib-bulleted-list mbr-iconfont mbr-iconfont-btn"></span>Farmbot Guide</a></div></li><li class="nav-item"><a class="nav-link link text-white display-7" href="webot.html"><span class="mobi-mbri mobi-mbri-android mbr-iconfont mbr-iconfont-btn"></span>Webots&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-white display-7" href="teamfarmbot.html"><span class="socicon socicon-myspace mbr-iconfont mbr-iconfont-btn" style="font-size: 31px;"></span>
+                </li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-7" href="farmbot.html" data-toggle="dropdown-submenu" aria-expanded="false"><span class="socicon socicon-newsvine mbr-iconfont mbr-iconfont-btn"></span>Farmbot&nbsp;</a><div class="dropdown-menu"><a class="text-white dropdown-item display-7" href="farmbot.html" aria-expanded="false"><span class="socicon socicon-filmweb mbr-iconfont mbr-iconfont-btn"></span>&nbsp;Farmbot 2020</a><a class="text-white dropdown-item display-7" href="https://farm.bot/" aria-expanded="false" target="_blank"><span class="mbri-right mbr-iconfont mbr-iconfont-btn"></span>Official Farmbot&nbsp;</a><a class="text-white dropdown-item display-7" href="farmbot.html"><span class="mbrib-bulleted-list mbr-iconfont mbr-iconfont-btn"></span>Farmbot Guide</a></div></li><li class="nav-item"><a class="nav-link link text-white display-7" href="webot.html"><span class="mobi-mbri mobi-mbri-android mbr-iconfont mbr-iconfont-btn"></span>Webots&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-white display-7" href="teamfarmbot.html"><span class="socicon socicon-myspace mbr-iconfont mbr-iconfont-btn" style="font-size: 31px;"></span>
                         Team Farmbot &nbsp;&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-white display-7" href="aboutme.html"><span class="mbrib-user mbr-iconfont mbr-iconfont-btn"></span>About Me &nbsp;&nbsp;</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section class="mbr-section content5 cid-s0aok6deDE" id="content5-20">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-s0aok6deDE" id="content5-20">
 
     
 
@@ -104,13 +105,16 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/tether/tether.min.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
+  <script src="assets/tether/tether.min.js"></script>
+  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
-</body>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
+  </body>
 </html>
