--- a/webot.html
+++ b/webot.html
@@ -58,14 +58,14 @@
                 <li class="nav-item">
                     <a class="nav-link link text-white display-7" href="index.html"><span class="mbrib-home mbr-iconfont mbr-iconfont-btn"></span>
                         Home &nbsp; &nbsp;</a>
-                </li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-7" href="farmbot.html" data-toggle="dropdown-submenu" aria-expanded="true"><span class="socicon socicon-newsvine mbr-iconfont mbr-iconfont-btn"></span>Farmbot&nbsp;</a><div class="dropdown-menu"><a class="text-white dropdown-item display-7" href="farmbot.html" aria-expanded="false"><span class="socicon socicon-filmweb mbr-iconfont mbr-iconfont-btn"></span>&nbsp;Farmbot 2020</a><a class="text-white dropdown-item display-7" href="farmbotguide.html"><span class="mbrib-bulleted-list mbr-iconfont mbr-iconfont-btn"></span>Farmbot Guide</a><a class="text-white dropdown-item display-7" href="https://farm.bot/" aria-expanded="false" target="_blank"><span class="mbri-right mbr-iconfont mbr-iconfont-btn"></span>Official Farmbot&nbsp;</a></div></li><li class="nav-item"><a class="nav-link link text-white display-7" href="webot.html"><span class="mobi-mbri mobi-mbri-android mbr-iconfont mbr-iconfont-btn"></span>Webots&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-white display-7" href="teamfarmbot.html"><span class="socicon socicon-myspace mbr-iconfont mbr-iconfont-btn" style="font-size: 31px;"></span>
+                </li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-7" href="farmbot.html" data-toggle="dropdown-submenu" aria-expanded="true"><span class="socicon socicon-newsvine mbr-iconfont mbr-iconfont-btn"></span>Farmbot&nbsp;</a><div class="dropdown-menu"><a class="text-white dropdown-item display-7" href="farmbot.html" aria-expanded="false"><span class="socicon socicon-filmweb mbr-iconfont mbr-iconfont-btn"></span>&nbsp;Farmbot 2020</a><a class="text-white dropdown-item display-7" href="farmbotguide.html"><span class="mbrib-bulleted-list mbr-iconfont mbr-iconfont-btn"></span>Farmbot Guide</a><a class="text-white dropdown-item display-7" href="https://github.com/Lockam1/FarmBot2020" aria-expanded="true" target="_blank"><span class="mbrib-github mbr-iconfont mbr-iconfont-btn"></span>Github Repo</a><a class="text-white dropdown-item display-7" href="https://farm.bot/" aria-expanded="false" target="_blank"><span class="mbri-right mbr-iconfont mbr-iconfont-btn"></span>Official Farmbot&nbsp;</a></div></li><li class="nav-item"><a class="nav-link link text-white display-7" href="webot.html"><span class="mobi-mbri mobi-mbri-android mbr-iconfont mbr-iconfont-btn"></span>Webots&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-white display-7" href="teamfarmbot.html"><span class="socicon socicon-myspace mbr-iconfont mbr-iconfont-btn" style="font-size: 31px;"></span>
                         Team Farmbot &nbsp;&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-white display-7" href="aboutme.html"><span class="mbrib-user mbr-iconfont mbr-iconfont-btn"></span>About Me &nbsp;&nbsp;</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-section content5 cid-rZZ6K1Ihdg" id="content5-15">
+<section class="engine"><a href="https://mobirise.info/c">site builder</a></section><section class="mbr-section content5 cid-rZZ6K1Ihdg" id="content5-15">
 
     
 
@@ -354,8 +354,8 @@ PC running Windows 10</p><p><span style="font-size: 1rem;">PC running VirtualBox
         <div class="media-container-row">
             <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
                 <ul>
-                    <li><em><strong>Windows 10 </strong>(64-bit) &nbsp;i5 3.2GHz, 1.5 TB HDD</em></li>
-                    <li><em><strong>RAM</strong>&nbsp;- 22 GB</em></li>
+                    <li><em><strong>Mac High Sierra&nbsp;</strong>(64-bit) &nbsp;i5 3.2GHz, 4 TB HDD</em></li>
+                    <li><em><strong>RAM</strong>&nbsp;- 17GB</em></li>
                     <li><em><strong><a href="https://cyberbotics.com/doc/guide/verifying-your-graphics-driver-installation#unsupported-graphics-cards" target="_blank">Graphics Card(s)</a></strong> - ATI Radeon HD 4550, Intel HD Graphics 4600. &nbsp;&nbsp;<strong>Note:</strong>&nbsp;Webots officially supports only recent <strong>NVIDIA</strong> and <strong>AMD</strong> graphics adapters.</em></li>
                 </ul>
             </div>
